Fixed job company/dates line on mobile.

--- a/less/seg_resume.less
+++ b/less/seg_resume.less
@@ -102,3 +102,17 @@ table td.cell-center {
     .column-break-inside(avoid);
   }
 }
+
+/* #positions */
+#positions {
+  .positionInfo {
+    .company{
+      
+    }
+    .dates{
+      font-size:9pt;
+      float:right;
+    }
+  }
+}
+
